syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum NormalAskHistoryType {
  UNKNOWN = 0;
  PRIMARYADDITIONAL = 1;
  SECONDARY = 2;
}

message NormalAskHistory {
  string id = 1;
  NormalAskHistoryType type = 2;
  string account_id = 3;
  string price_ujpy = 4;
  string amount_uupx = 5;
  bool is_accepted = 6;
  string contract_price_ujpy = 7;
}
