syntax = "proto3";
package main;

import "firebase_rules_options.proto";
import "google/protobuf/timestamp.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message NormalSettlement {
  string id =1;
  string bid_id = 2;
  string ask_id = 3;
  string price_ujpy = 4;
  string amount_uupx = 5;
  //google.protobuf.Timestamp date = 6;
}
